--- a/src/style.css
+++ b/src/style.css
@@ -104,4 +104,138 @@
   font-size: 12px;
   margin-top: 5px;
 }
+
+.home {
+  background-color: #a7bcff;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.home .container {
+  border: 1px solid white;
+  border-radius: 10px;
+  width: 65%;
+  height: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+}
+
+.home .container .Sidebar {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  background-color: #3e3c61;
+}
+
+.home .container .Sidebar .search {
+  border-bottom: 2px solid gray;
+}
+
+.home .container .Sidebar .search .searchForm input {
+  background-color: transparent;
+  border: none;
+  color: white;
+  outline: none;
+}
+
+.home .container .Sidebar .search .searchForm input::-webkit-input-placeholder {
+  color: lightgray;
+}
+
+.home .container .Sidebar .search .searchForm input:-ms-input-placeholder {
+  color: lightgray;
+}
+
+.home .container .Sidebar .search .searchForm input::-ms-input-placeholder {
+  color: lightgray;
+}
+
+.home .container .Sidebar .search .searchForm input::placeholder {
+  color: lightgray;
+}
+
+.home .container .Sidebar .userChat {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  cursor: pointer;
+  color: white;
+}
+
+.home .container .Sidebar .userChat:hover {
+  background-color: #2f2d52;
+}
+
+.home .container .Sidebar .userChat img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.home .container .Chat {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+}
+
+.home .container .Navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #2f2d52;
+  height: 50px;
+  padding: 10px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: #ddddf7;
+}
+
+.home .container .Navbar .logo {
+  font-weight: bold;
+}
+
+.home .container .Navbar .user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+}
+
+.home .container .Navbar .user img {
+  background-color: #ddddf7;
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.home .container .Navbar .user button {
+  background-color: #5d5b8d;
+  color: #ddddf7;
+  font-size: 10px;
+  border: none;
+  cursor: pointer;
+}
 /*# sourceMappingURL=style.css.map */
