--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,21 @@
+@mixin mobile {
+    @media screen and (max-width: 480px) {
+        @content;
+    }
+}
+
+@mixin tablet{
+    @media screen and (max-width: 768px) {
+        @content;
+    }
+}
+
+@mixin laptop {
+    @media screen and (max-width: 1200px) {
+        @content;
+    }
+}
+
 .formContainer {
     background-color: #a7bcff;
     height: 100vh;
@@ -81,10 +99,14 @@
         height: 80%;
         display: flex;
         overflow: hidden;
+        @include tablet {
+            width: 90%;
+        }
 
         .Sidebar{
             flex: 1;
             background-color: #3e3c61;
+            position: relative;
 
             .search{
                 border-bottom: 2px solid gray;
@@ -266,6 +288,7 @@
 
             .logo{
                 font-weight: bold;
+                
             }
             .user {
                 display: flex;
@@ -285,6 +308,10 @@
                     font-size: 10px;
                     border: none;
                     cursor: pointer;
+                    @include tablet {
+                        position: absolute;
+                        bottom: 10px;
+                    }
                 }
             }
         }
